--- a/MiWS/MiWS.csproj
+++ b/MiWS/MiWS.csproj
@@ -62,16 +62,29 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ClienteEstacion.aspx" />
     <Content Include="Service1.svc" />
     <Content Include="Web.config" />
+    <Content Include="WS_CargaConsumoEstacion.asmx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteEstacion.aspx.cs">
+      <DependentUpon>ClienteEstacion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ClienteEstacion.aspx.designer.cs">
+      <DependentUpon>ClienteEstacion.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Persona.cs" />
     <Compile Include="Service1.svc.cs">
       <DependentUpon>Service1.svc</DependentUpon>
     </Compile>
     <Compile Include="IWSPersona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WS_CargaConsumoEstacion.asmx.cs">
+      <DependentUpon>WS_CargaConsumoEstacion.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
